# pyinstaller-package-specification

./: .gitignore  README.md  app.py  pyproject.toml
module1/: a.py
