[tool.poetry]
name = "pyinstaller-package-specification"
version = "0.1.0"
description = ""
authors = ["largomst <dingrui.zhen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyqt5 = "^5.14.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.5"
black = "^19.10b0"
mypy = "^0.761"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
